fix: header z-index issue

--- a/components/desktop_nav/index.css
+++ b/components/desktop_nav/index.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 10000;
+  z-index: 10000001;
   background-color: var(--color-ot-white);
   box-shadow: 0px 4px 20px rgba(51, 51, 51, 0.15);
 }
