--- a/components/popover/index.css
+++ b/components/popover/index.css
@@ -1,3 +1,7 @@
+.select2-dropdown {
+  z-index: 10001;
+}
+
 .popover__selection {
   border: none !important;
 }
@@ -21,6 +25,10 @@
 .popover__selection[aria-expanded="true"] > .select2-selection__arrow > b {
   border-width: 0 5.6px 6px 5.6px !important;
   border-color: transparent transparent var(--color-ot-blue) transparent !important;
+}
+
+.popover__container_modal.select2-dropdown {
+  z-index: 10000001;
 }
 
 .popover__container {
